--- a/package.json
+++ b/package.json
@@ -8,16 +8,8 @@
     "start": "next start",
     "lint": "next lint"
   },
-  
-  
   "dependencies": {
-    "@mysten/dapp-kit": "^0.16.15",
-    "@mysten/sui": "^1.36.0",
-    "@mysten/sui.js": "^0.54.1",
-    "@mysten/wallet-adapter-react": "^11.0.0",
-    "@mysten/wallet-adapter-sui-wallet": "^0.3.0",
-    "@mysten/wallet-adapter-wallet-standard": "^0.8.0",
-    "@mysten/wallet-kit": "^0.8.6",
+    "@headlessui/react": "^2.2.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -36,7 +28,6 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-query": "^5.82.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.263.1",
@@ -51,10 +42,11 @@
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.10",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.51.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "^14.0.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
 }
+
